# pgdd

./: .gitignore  .gitlab-ci.yml  404.html  ADVANCED-INSTALL.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  create-installer.html  developer.html  index.html  intro.html  permissions.html  pgdd--0.1--0.2.sql  pgdd--0.1.0.sql  pgdd--0.2--0.3beta.sql  pgdd--0.3--0.4alpha1.sql  pgdd.control  pgdd_rust.control  print.html  query.html  quick-start.html  searchindex.js  searchindex.json  toc.html  toc.js  upgrade.html
.github/workflows/: deploy-mdbook.yml
archive/: pgdd--0.1--0.2.sql  pgdd--0.2--0.3.sql  pgdd--0.3--0.4alpha1.sql
db/: sqitch.conf  sqitch.plan
db/deploy/: 001.sql  002.sql  003.sql
db/revert/: 001.sql  002.sql  003.sql
db/verify/: 001.sql  002.sql  003.sql
docs/: book.toml
docs/src/: SUMMARY.md  create-installer.md  developer.md  intro.md  permissions.md  query.md  quick-start.md  upgrade.md
sql/: README.md  pgdd--0.3--0.3.1.sql  pgdd--0.3.1--0.4.0-dev.sql  pgdd--0.3.sql
src/: columns-12.sql  columns-pre-12.sql  lib.rs  tables-all.sql  test.sql  views-all.sql
src/sql/: comments_all.sql  create-extension-tables-all.sql  create_extension_tables_all.sql  create_extension_views_all.sql  load_default_data.sql
src/sql/function_query/: columns-12.sql  columns_12.sql  database-all.sql  database_all.sql  (+15 more)
standalone/: README.md  pgdd_0.4.0-dev_bionic_pg10_amd64.deb  pgdd_0.4.0-dev_bionic_pg11_amd64.deb  pgdd_0.4.0-dev_bionic_pg12_amd64.deb  pgdd_0.4.0-dev_bionic_pg13_amd64.deb  pgdd_0.4.0-dev_focal_pg10_amd64.deb  pgdd_0.4.0-dev_focal_pg11_amd64.deb  pgdd_0.4.0-dev_focal_pg12_amd64.deb  pgdd_0.4.0-dev_focal_pg13_amd64.deb  pgdd_bionic_pg10-0.3.1_amd64.deb  pgdd_bionic_pg11-0.3.1_amd64.deb  pgdd_bionic_pg12-0.3.1_amd64.deb  pgdd_bionic_pg13-0.3.1_amd64.deb  pgdd_ubuntu20_0.3.1_amd64.deb  pgdd_v0_2.sql  pgdd_v0_3.sql
tests/: test-partition-data.sql
