[package]
name = "pgdd"
version = "0.5.1"
edition = "2018"
description = "In-database (PostgreSQL) data dictionary providing database introspection via standard SQL query syntax."

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg_test = []

[dependencies]
pgrx = "=0.10.2"
pgrx-macros = "=0.10.2"


[dev-dependencies]
pgrx-tests = "=0.10.2"


[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"
codegen-units = 1

