[package]
name = "pgdd"
version = "0.6.0"
edition = "2024"
description = "In-database (PostgreSQL) data dictionary providing database introspection via standard SQL query syntax."

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]
pg_test = []

[dependencies]
pgrx = "0.16.1"

[dev-dependencies]
pgrx-tests = "0.16.1"


[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"
codegen-units = 1

